[package]
name = "roguelike"
version = "0.1.0"
authors = ["Max Mijot <ahmad.mijot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


#[[bin]]
#name = "part-3a"
#path = "src/part-3a.rs"
#name = "part-2a-generalising"
#path = "src/part-2a-generalising.rs"

[dependencies]
tcod = "0.15.0"
rand = "0.3.9"
